--- a/bamboo-products.html
+++ b/bamboo-products.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="../api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css" />
     <link rel="stylesheet" href="assets/css/libs.bundle.css" />
     <link rel="stylesheet" href="assets/css/theme.bundle.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>MAGO International Exim</title>
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index-2.html">
-          <!-- <img src="assets/img/brand.svg" class="navbar-brand-img" alt="..."> -->
-          <h2 class="text-primary fw-bolder">MAGO Int.Exim</h2>
+        <a class="navbar-brand m-auto" href="index.html">
+          <img src="assets/img/logo/mago-logo-blue.png" class="navbar-brand" style="height: auto; width: 45%;">
+          <!-- <h2 class="text-primary fw-bolder">MAGO Int.Exim</h2> -->
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -26,29 +27,19 @@
           </button>
           <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarLandings" data-bs-toggle="dropdown" href="index.html" aria-haspopup="true" aria-expanded="false">
-                Home
-              </a>
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarPages" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Bamboo Products
-              </a>
+              <a class="nav-link" href="/bamboo-products.html">Bamboo Products</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarAccount" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Food Products
-              </a>
+              <a class="nav-link" href="/food-products.html">Food Products</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                About
-              </a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
           </ul>
-          <a class="navbar-btn btn btn-sm btn-primary lift ms-auto" href="#" target="_blank">
-            Contact now
-          </a>
+          <a class="navbar-btn btn btn-primary lift ms-auto" href="/contact.html">Contact now</a>
         </div>
       </div>
     </nav>
@@ -88,67 +79,80 @@
 
 
     <div class="row p-5 m-5">
-      <div class="col-12 col-md-6 col-lg-4 d-flex">
+      <div class="col-12 col-md-6 col-lg-3 d-flex">
         <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/toothbrush.png);">
-          <a class="card-meta" href="#!">
-            <hr class="card-meta-divider text-white-20">
-            <h6 class="text-uppercase text-white-80 me-2 mb-0">
-              Toothbrush
-            </h6>
-          </a>
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Toothbrush
+              </h5>
+            </span>
+          </div>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-4 d-flex">
         <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/toothbrush-1.jpg);">
-          <a class="card-meta" href="#!">
-            <hr class="card-meta-divider text-white-20">
-            <h6 class="text-uppercase text-white-80 me-2 mb-0">
-              Toothbrush
-            </h6>
-          </a>
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Toothbrush
+              </h5>
+            </span>
+          </div>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-4 d-flex">
         <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/toothbrush-2.jpg);">
-          <a class="card-meta" href="#!">
-            <hr class="card-meta-divider text-white-20">
-            <h6 class="text-uppercase text-white-80 me-2 mb-0">
-              Toothbrush
-            </h6>
-          </a>
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Toothbrush
+              </h5>
+            </span>
+          </div>
         </div>
       </div>
+
     </div>
 
     <div class="row p-5 m-5">
-      <div class="col-12 col-md-6 col-lg-4 d-flex">
-        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/comb.png);">
-          <a class="card-meta" href="#!">
-            <hr class="card-meta-divider text-white-20">
-            <h6 class="text-uppercase text-white-80 me-2 mb-0">
-              Comb
-            </h6>
-          </a>
+      <div class="col-12 col-md-6 col-lg-3 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/earbud.png);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Ear buds
+              </h5>
+            </span>
+          </div>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-4 d-flex">
-        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/earbud.png);">
-          <a class="card-meta" href="#!">
-            <hr class="card-meta-divider text-white-20">
-            <h6 class="text-uppercase text-white-80 me-2 mb-0">
-              Ear bud
-            </h6>
-          </a>
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/comb.png);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Comb
+              </h5>
+            </span>
+          </div>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-4 d-flex">
         <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/straw.png);">
-          <a class="card-meta" href="#!">
-            <hr class="card-meta-divider text-white-20">
-            <h6 class="text-uppercase text-white-80 me-2 mb-0">
-              Straw
-            </h6>
-          </a>
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Straw
+              </h5>
+            </span>
+          </div>
         </div>
       </div>
     </div>
@@ -156,32 +160,38 @@
     <div class="row p-5 m-5">
       <div class="col-12 col-md-6 col-lg-4 d-flex">
         <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/straw.jpg);">
-          <a class="card-meta" href="#!">
-            <hr class="card-meta-divider text-white-20">
-            <h6 class="text-uppercase text-white-80 me-2 mb-0">
-              Straw
-            </h6>
-          </a>
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Straw
+              </h5>
+            </span>
+          </div>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-4 d-flex">
+      <div class="col-12 col-md-6 col-lg-3 d-flex">
         <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/Toothbrush-Natural-Kids-Soft.png);">
-          <a class="card-meta" href="#!">
-            <hr class="card-meta-divider text-white-20">
-            <h6 class="text-uppercase text-white-80 me-2 mb-0">
-              Toothbrush Natural Kids Soft
-            </h6>
-          </a>
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Toothbrush Natural Kids Soft
+              </h5>
+            </span>
+          </div>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-4 d-flex">
-        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/raw-bamboo.jpeg);">
-          <a class="card-meta" href="#!">
-            <hr class="card-meta-divider text-white-20">
-            <h6 class="text-uppercase text-white-80 me-2 mb-0">
-              Raw Bamboo
-            </h6>
-          </a>
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Kit
+              </h5>
+            </span>
+          </div>
         </div>
       </div>
     </div>    
@@ -210,35 +220,28 @@
         <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 48h2880V0h-720C1442.5 52 720 0 720 0H0v48z" fill="currentColor"/></svg>      </div>
     </div>
 
-     <!-- FOOTER -->
-     <footer class="py-8 py-md-11 bg-dark">
+    <!-- FOOTER -->
+    <footer class="py-8 py-md-11 bg-dark">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-4 col-lg-3">
-            <!-- <img src="assets/img/brand.svg" alt="..." class="footer-brand img-fluid mb-2"> -->
-            <h2 class="text-primary fw-bolder">MAGO Int.Exim</h2>
-            <p class="text-gray-700 mb-2">
-              Something beyond trading.
-            </p>
+            <img src="assets/img/logo/mago-logo-blue.png" class="img-fluid mb-2">
+            <!-- <h2 class="text-primary fw-bolder">MAGO Int.Exim</h2>
+            <p class="text-gray-700 mb-2">Something beyond trading.</p> -->
             <ul class="list-unstyled list-inline list-social mb-6 mb-md-0">
-              <li class="list-inline-item list-social-item me-3">
+              <li class="list-inline-item list-social-item ms-6">
                 <a href="#!" class="text-decoration-none">
-                  <img src="assets/img/icons/social/instagram.svg" class="list-social-icon" alt="...">
+                  <i class="bi bi-linkedin"></i>
                 </a>
               </li>
               <li class="list-inline-item list-social-item me-3">
                 <a href="#!" class="text-decoration-none">
-                  <img src="assets/img/icons/social/facebook.svg" class="list-social-icon" alt="...">
+                  <i class="bi bi-facebook" class="list-social-icon"></i>
                 </a>
               </li>
               <li class="list-inline-item list-social-item me-3">
                 <a href="#!" class="text-decoration-none">
-                  <img src="assets/img/icons/social/twitter.svg" class="list-social-icon" alt="...">
-                </a>
-              </li>
-              <li class="list-inline-item list-social-item">
-                <a href="#!" class="text-decoration-none">
-                  <img src="assets/img/icons/social/pinterest.svg" class="list-social-icon" alt="...">
+                  <i class="bi bi-twitter"></i>
                 </a>
               </li>
             </ul>
@@ -265,11 +268,6 @@
                 <li class="mb-3">
                   <a href="/about.html" class="text-reset">
                     Gore Bandhu
-                  </a>
-                </li>
-                <li class="mb-3">
-                  <a href="/about.html" class="text-reset">
-                    Amba Bhadang
                   </a>
                 </li>
                 <li class="mb-3">
@@ -307,21 +305,28 @@
             </h6>
             <ul class="list-unstyled text-muted mb-0">
               <li class="mb-3">
-                <a href="#!" class="text-reset">
+                <span class="text-reset">
                   B603, RAGA HOMES, Chikhali, Pune, Maharashtra, India, Pin Code - 411062
-                </a>
+                </span>
               </li>
               <li class="mb-3">
-                <a href="#!" class="text-reset">
-                  Email : magointexim@gmail.com
-                </a>
+                <span class="text-reset">
+                  <i class="bi bi-envelope-at"></i>
+                  <a href="mailto:contact@magoint.com">contact@magoint.com</a>
+                </span>
+              </li>
+              <li class="mb-3">
+                <span class="text-reset">
+                  <i class="bi bi-whatsapp"></i>
+                  <a href="tel:+919665863311">+91 9665863311</a> | <a href="tel:+919665863311">+91 9730667744</a>
+                </span>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </footer>
-    <script src='api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
+    <script src='../api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
     <script src="assets/js/vendor.bundle.js"></script>
     <script src="assets/js/theme.bundle.js"></script>
   </body>
