--- a/contact.html
+++ b/contact.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="../api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css" />
     <link rel="stylesheet" href="assets/css/libs.bundle.css" />
     <link rel="stylesheet" href="assets/css/theme.bundle.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>MAGO International Exim</title>
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index-2.html">
-          <!-- <img src="assets/img/brand.svg" class="navbar-brand-img" alt="..."> -->
-          <h2 class="text-primary fw-bolder">MAGO Int.Exim</h2>
+        <a class="navbar-brand m-auto" href="index.html">
+          <img src="assets/img/logo/mago-logo-blue.png" class="navbar-brand" style="height: auto; width: 45%;">
+          <!-- <h2 class="text-primary fw-bolder">MAGO Int.Exim</h2> -->
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -26,29 +27,19 @@
           </button>
           <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarLandings" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Home
-              </a>
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarPages" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Bamboo Products
-              </a>
+              <a class="nav-link" href="/bamboo-products.html">Bamboo Products</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarAccount" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Food Products
-              </a>
+              <a class="nav-link" href="/food-products.html">Food Products</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                About
-              </a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
           </ul>
-          <a class="navbar-btn btn btn-sm btn-primary lift ms-auto" href="#" target="_blank">
-            Contact now
-          </a>
+          <a class="navbar-btn btn btn-primary lift ms-auto" href="/contact.html">Contact now</a>
         </div>
       </div>
     </nav>
@@ -152,30 +143,23 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-4 col-lg-3">
-            <!-- <img src="assets/img/brand.svg" alt="..." class="footer-brand img-fluid mb-2"> -->
-            <h2 class="text-primary fw-bolder">MAGO Int.Exim</h2>
-            <p class="text-gray-700 mb-2">
-              Something beyond trading.
-            </p>
+            <img src="assets/img/logo/mago-logo-blue.png" class="img-fluid mb-2">
+            <!-- <h2 class="text-primary fw-bolder">MAGO Int.Exim</h2>
+            <p class="text-gray-700 mb-2">Something beyond trading.</p> -->
             <ul class="list-unstyled list-inline list-social mb-6 mb-md-0">
-              <li class="list-inline-item list-social-item me-3">
+              <li class="list-inline-item list-social-item ms-6">
                 <a href="#!" class="text-decoration-none">
-                  <img src="assets/img/icons/social/instagram.svg" class="list-social-icon" alt="...">
+                  <i class="bi bi-linkedin"></i>
                 </a>
               </li>
               <li class="list-inline-item list-social-item me-3">
                 <a href="#!" class="text-decoration-none">
-                  <img src="assets/img/icons/social/facebook.svg" class="list-social-icon" alt="...">
+                  <i class="bi bi-facebook" class="list-social-icon"></i>
                 </a>
               </li>
               <li class="list-inline-item list-social-item me-3">
                 <a href="#!" class="text-decoration-none">
-                  <img src="assets/img/icons/social/twitter.svg" class="list-social-icon" alt="...">
-                </a>
-              </li>
-              <li class="list-inline-item list-social-item">
-                <a href="#!" class="text-decoration-none">
-                  <img src="assets/img/icons/social/pinterest.svg" class="list-social-icon" alt="...">
+                  <i class="bi bi-twitter"></i>
                 </a>
               </li>
             </ul>
@@ -202,11 +186,6 @@
                 <li class="mb-3">
                   <a href="/about.html" class="text-reset">
                     Gore Bandhu
-                  </a>
-                </li>
-                <li class="mb-3">
-                  <a href="/about.html" class="text-reset">
-                    Amba Bhadang
                   </a>
                 </li>
                 <li class="mb-3">
@@ -244,14 +223,21 @@
             </h6>
             <ul class="list-unstyled text-muted mb-0">
               <li class="mb-3">
-                <a href="#!" class="text-reset">
+                <span class="text-reset">
                   B603, RAGA HOMES, Chikhali, Pune, Maharashtra, India, Pin Code - 411062
-                </a>
+                </span>
               </li>
               <li class="mb-3">
-                <a href="#!" class="text-reset">
-                  Email : magointexim@gmail.com
-                </a>
+                <span class="text-reset">
+                  <i class="bi bi-envelope-at"></i>
+                  <a href="mailto:contact@magoint.com">contact@magoint.com</a>
+                </span>
+              </li>
+              <li class="mb-3">
+                <span class="text-reset">
+                  <i class="bi bi-whatsapp"></i>
+                  <a href="tel:+919665863311">+91 9665863311</a> | <a href="tel:+919665863311">+91 9730667744</a>
+                </span>
               </li>
             </ul>
           </div>
@@ -263,5 +249,3 @@
     <script src="assets/js/theme.bundle.js"></script>
   </body>
 </html>
-
-
