--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="../api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css" />
     <link rel="stylesheet" href="assets/css/libs.bundle.css" />
     <link rel="stylesheet" href="assets/css/theme.bundle.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>MAGO International Exim</title>
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index-2.html">
-          <!-- <img src="assets/img/brand.svg" class="navbar-brand-img" alt="..."> -->
-          <h2 class="text-primary fw-bolder">MAGO Int.Exim</h2>
+        <a class="navbar-brand m-auto" href="index.html">
+          <img src="assets/img/logo/mago-logo-blue.png" class="navbar-brand" style="height: auto; width: 45%;">
+          <!-- <h2 class="text-primary fw-bolder">MAGO Int.Exim</h2> -->
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -26,29 +27,19 @@
           </button>
           <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarLandings" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Home
-              </a>
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarPages" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Bamboo Products
-              </a>
+              <a class="nav-link" href="/bamboo-products.html">Bamboo Products</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarAccount" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Food Products
-              </a>
+              <a class="nav-link" href="/food-products.html">Food Products</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-bs-toggle="dropdown" href="/about.html" aria-haspopup="true" aria-expanded="false">
-                About
-              </a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
           </ul>
-          <a class="navbar-btn btn btn-sm btn-primary lift ms-auto" href="#" target="_blank">
-            Contact now
-          </a>
+          <a class="navbar-btn btn btn-primary lift ms-auto" href="/contact.html">Contact now</a>
         </div>
       </div>
     </nav>
@@ -57,11 +48,11 @@
     <section class="pt-4 pt-md-11">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-12 col-md-5 order-md-2">
-            <img src="assets/img/eco-friendly.jpg" class="img-fluid mb-6 mb-md-0" alt="...">
+          <div class="col-12 col-md-4 order-md-1">
+            <img src="assets/img/food-1.jpg" class="img-fluid mb-6 mb-md-0" alt="...">
           </div>
-          <div class="col-12 col-md-7 order-md-1">
-            <h1 class="display-4">
+          <div class="col-12 col-md-4 order-md-2">
+            <h1 class="display-5">
               Order quality bamboo products. <br>
               <span class="text-primary">unique and natural.</span>
             </h1>
@@ -69,6 +60,9 @@
               Explore our range of edibles and best designed Bamboo products.
             </p>
           </div>
+          <div class="col-12 col-md-4 order-md-3">
+            <img src="assets/img/eco-friendly.jpg" class="img-fluid mb-6 mb-md-0" alt="...">
+          </div>          
         </div> <!-- / .row -->
       </div> <!-- / .container -->
     </section>
@@ -120,21 +114,6 @@
           </div>
           <div class="col-12 col-md-6">
             <div class="card shadow-light-lg lift lift-lg">
-              <img src="assets/img/toothbrush-2.jpg" alt="..." class="card-img-top">
-              <!-- Shape -->
-              <div class="position-relative">
-                <div class="shape shape-bottom shape-fluid-x text-white">
-                  <svg viewBox="0 0 2880 48" fill="none"><path d="M0 48h2880V0h-720C1442.5 52 720 0 720 0H0v48z" fill="currentColor"/></svg>                
-                </div>
-              </div>
-              <div class="card-body">
-                <h5 class="mb-0 me-auto">Toothbrush</h5>
-                <h6 class="text-uppercase me-2 mb-0">Bamboo Product</h6>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6">
-            <div class="card shadow-light-lg lift lift-lg">
               <img src="assets/img/straw.jpg" alt="..." class="card-img-top">
               <!-- Shape -->
               <div class="position-relative">
@@ -149,6 +128,17 @@
             </div>
           </div>
         </div>
+    </section>
+    <section class="pt-8 pt-md-11 pb-8 pb-md-14">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-10 col-lg-9 col-xl-8 text-center">
+            <a href="/bamboo-products.html" class="btn btn-primary">
+              View more
+            </a>
+          </div>
+        </div> <!-- / .row -->
+      </div> <!-- / .container -->
     </section>
 
     <!-- Food Products -->
@@ -198,16 +188,13 @@
         </div>
       </div>
     </section>
-
-
-    <!-- COMING SOON -->
     <section class="pt-8 pt-md-11 pb-8 pb-md-14">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-9 col-xl-8 text-center">
-            <h3>
-              ...and more soon.
-            </h3>
+            <a href="/food-products.html" class="btn btn-primary">
+              View more
+            </a>
           </div>
         </div> <!-- / .row -->
       </div> <!-- / .container -->
@@ -224,30 +211,23 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-4 col-lg-3">
-            <!-- <img src="assets/img/brand.svg" alt="..." class="footer-brand img-fluid mb-2"> -->
-            <h2 class="text-primary fw-bolder">MAGO Int.Exim</h2>
-            <p class="text-gray-700 mb-2">
-              Something beyond trading.
-            </p>
+            <img src="assets/img/logo/mago-logo-blue.png" class="img-fluid mb-2">
+            <!-- <h2 class="text-primary fw-bolder">MAGO Int.Exim</h2>
+            <p class="text-gray-700 mb-2">Something beyond trading.</p> -->
             <ul class="list-unstyled list-inline list-social mb-6 mb-md-0">
-              <li class="list-inline-item list-social-item me-3">
+              <li class="list-inline-item list-social-item ms-6">
                 <a href="#!" class="text-decoration-none">
-                  <img src="assets/img/icons/social/instagram.svg" class="list-social-icon" alt="...">
+                  <i class="bi bi-linkedin"></i>
                 </a>
               </li>
               <li class="list-inline-item list-social-item me-3">
                 <a href="#!" class="text-decoration-none">
-                  <img src="assets/img/icons/social/facebook.svg" class="list-social-icon" alt="...">
+                  <i class="bi bi-facebook" class="list-social-icon"></i>
                 </a>
               </li>
               <li class="list-inline-item list-social-item me-3">
                 <a href="#!" class="text-decoration-none">
-                  <img src="assets/img/icons/social/twitter.svg" class="list-social-icon" alt="...">
-                </a>
-              </li>
-              <li class="list-inline-item list-social-item">
-                <a href="#!" class="text-decoration-none">
-                  <img src="assets/img/icons/social/pinterest.svg" class="list-social-icon" alt="...">
+                  <i class="bi bi-twitter"></i>
                 </a>
               </li>
             </ul>
@@ -274,11 +254,6 @@
                 <li class="mb-3">
                   <a href="/about.html" class="text-reset">
                     Gore Bandhu
-                  </a>
-                </li>
-                <li class="mb-3">
-                  <a href="/about.html" class="text-reset">
-                    Amba Bhadang
                   </a>
                 </li>
                 <li class="mb-3">
@@ -316,14 +291,21 @@
             </h6>
             <ul class="list-unstyled text-muted mb-0">
               <li class="mb-3">
-                <a href="#!" class="text-reset">
+                <span class="text-reset">
                   B603, RAGA HOMES, Chikhali, Pune, Maharashtra, India, Pin Code - 411062
-                </a>
+                </span>
               </li>
               <li class="mb-3">
-                <a href="#!" class="text-reset">
-                  Email : magointexim@gmail.com
-                </a>
+                <span class="text-reset">
+                  <i class="bi bi-envelope-at"></i>
+                  <a href="mailto:contact@magoint.com">contact@magoint.com</a>
+                </span>
+              </li>
+              <li class="mb-3">
+                <span class="text-reset">
+                  <i class="bi bi-whatsapp"></i>
+                  <a href="tel:+919665863311">+91 9665863311</a> | <a href="tel:+919665863311">+91 9730667744</a>
+                </span>
               </li>
             </ul>
           </div>
